@@ -120,7 +120,7 @@ class ChouetteExportNetexBlocksMardukRouteIntegrationTest extends MardukRouteBui
         chouetteCreateExport.assertIsSatisfied();
         pollJobStatus.assertIsSatisfied();
 
-        Exchange exchange = pollJobStatus.getReceivedExchanges().get(0);
+        Exchange exchange = pollJobStatus.getReceivedExchanges().getFirst();
         exchange.getIn().setHeader("action_report_result", "OK");
         exchange.getIn().setHeader("data_url", chouetteUrl + "/chouette_iev/referentials/rut/jobs/1/data");
         processNetexBlocksExportResultTemplate.send(exchange);
